add query endpoint
